[tool.poetry]
name = "feature-flag-hackday"
version = "0.1.0"
description = "Test feature flags services"
authors = ["Bill Amberg <wamberg@pbs.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
UnleashClient = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
